<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="12dp"
            android:src="@drawable/ic_search_black_24dp" />

        <EditText
            android:id="@+id/edit_text_search"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="?attr/actionBarSize"
            android:padding="5dp"
            android:inputType="text"
            android:hint="@string/enter_city_name_here" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutDescriptionandImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@id/layout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:src="@drawable/sunnyclouds" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutTemperatureContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/LinearLayoutDescriptionandImage"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:src="@drawable/temperaturemax" />

            <TextView
                android:id="@+id/tvMaxTemperature"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_36_c"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:src="@drawable/temperaturemin" />

            <TextView
                android:id="@+id/tvMinTemperature"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/_36_c"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LinearLayoutTemperatureContainer"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:src="@drawable/sunrise" />

        <TextView
            android:id="@+id/tvSunRise"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="5"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/_6_00_am"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LinearLayout3"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:src="@drawable/sun"/>

        <TextView
            android:id="@+id/tvSunSet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/_6_30_pm"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:padding="10dp"
            android:layout_margin="10dp"/>

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="99dp"
        android:layout_height="88dp"
        android:visibility="gone"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="169dp"
        android:layout_marginTop="292dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="351dp" />

</RelativeLayout>